# cheese

./: .gitignore  CMakeLists.txt
include/: camera.h  ebo.h  fast_obj.h  lights.h  mesh_loader.h  shader.h  shapes.h  texture.h  ui.h  util.h  vao.h  vbo.h
include/glad/: glad.h
resources/: FarmHouse.mtl  light.frag.glsl  light.vert.glsl  shad.frag.glsl  shad.vert.glsl  woah.frag.glsl
src/: camera.c  ebo.c  fast_obj.c  glad.c  lights.c  main.c  mesh_loader.c  shader.c  shapes.c  texture.c  ui.cpp  util.c  vao.c  vbo.c
test/: FarmHouse.mtl  Makefile  rewrite.c  s.f.glsl  s.v.glsl  test.c
uitest/: CMakeLists.txt
uitest/include/: wrapper.h
uitest/src/: main.c  wrapper.cpp
